--- a/www/index.html
+++ b/www/index.html
@@ -11,10 +11,10 @@
   <script src="cordova.js"></script>
 </head>
 
-<body>
-  <body onload="onLoad()">
+<body onload="onLoad">
   <div id="root"></div>
   <script src="bundle.js"></script>
+  <div onload="onLoadApplication"><div>
 </body>
 
 </html>
