--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
   <title>Zero Wallet</title>
   <!-- Needed for Cordova/PhoneGap (will be a 404 during development) -->
   <script src="cordova.js"></script>
+  <script src="events.js"></script>
 </head>
 
 <body onload="onLoad">
