remove unneeded html code

--- a/www/index.html
+++ b/www/index.html
@@ -12,10 +12,10 @@
   <script src="events.js"></script>
 </head>
 
-<body onload="onLoad">
+<body>
   <div id="root"></div>
   <script src="bundle.js"></script>
-  <div onload="onLoadApplication"><div>
+  <div><div>
 </body>
 
 </html>
