--- a/www/index.html
+++ b/www/index.html
@@ -7,9 +7,9 @@
     type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700' rel='stylesheet' type='text/css'>
   <title>Zero Wallet</title>
+  <meta name="viewport" content="viewport-fit=cover, width=device-width, height=device-height, initial-scale=1, maximum-scale=1, target-densitydpi=device-dpi, user-scalable=0">
   <!-- Needed for Cordova/PhoneGap (will be a 404 during development) -->
   <script src="cordova.js"></script>
-  <script src="events.js"></script>
 </head>
 
 <body>
